# rust-rocket-api

./: .env  .gitignore  Cargo.toml
migrations/2020-05-25-163802_create_post/: up.sql
src/: ignite.rs  main.rs  models.rs  schema.rs
src/app/controllers/: posts.rs
src/app/models/: post.rs
src/app/services/: post.rs
src/config/: database.rs
