[package]
name = "rust-todoapp"
version = "0.1.0"
authors = ["Elihu Cruz <elihuacruz@gmail.com>"]
edition = "2018"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"
