[package]
name = "rust-todoapp"
version = "0.1.0"
authors = ["Elihu Cruz <elihuacruz@gmail.com>"]
edition = "2018"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
